# web-cli

./: .gitignore  LICENSE  README.md  package-lock.json
.github/workflows/: release.yml
demo/solid-sdk-demo/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
demo/solid-sdk-demo/public/: tools.json  tools.md
demo/solid-sdk-demo/src/: App.tsx  main.tsx  style.css
desktop/: index.html  package-lock.json  package.json  vite.config.js
desktop/scripts/: stage-tauri-binaries.mjs
desktop/src/: main.jsx  style.css
desktop/src/event-monitor/: EventMonitorApp.jsx  event-monitor.css  eventMonitorFormatters.js  eventMonitorStore.js
desktop/tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/tauri/icons/: icon.icns
desktop/tauri/src/: counter_demo.rs  lib.rs  webcli_app.rs  webcli_core.rs  webcli_ipc.rs  webcli_native_host.rs  webcli_native_registration.rs  webcli_paths.rs  webcli_tool.rs
extension/: background.js  background.test.js  manifest.json  popup.html  popup.js  webcli-sdk-content.js  webcli-sdk-content.test.js
extension/demo-skills/: tools.json  tools.md
sdk/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
sdk/src/: extension-id.ts  index.test.ts  index.ts
