[package]
name = "webcli-app"
version = "0.1.3"
description = "WebCli"
authors = ["Isaac Lin"]
edition = "2021"
default-run = "webcli-app"
autobins = false

[lib]
name = "webcli_lib"
path = "src/lib.rs"

[[bin]]
name = "webcli-app"
path = "src/bin/webcli-app.rs"

[[bin]]
name = "webcli-native-host"
path = "src/bin/webcli-native-host.rs"

[[bin]]
name = "webcli-tool"
path = "src/bin/webcli-tool.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
dirs = "6"
encoding_rs = "0.8"
jsonschema = { version = "0.46.5", default-features = false }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls"] }
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Globalization"] }
winreg = "0.52"
